[web] Fix display of artists having a very long name
Artists with very long names do not overlap the rest of the UI.

--- a/web-src/src/mystyles.scss
+++ b/web-src/src/mystyles.scss
@@ -161,6 +161,10 @@ a.navbar-item {
   overflow: auto;
 }
 
+.fd-width-auto {
+  min-width: auto;
+}
+
 /* Show scrollbar for navbar menu in desktop mode if content exceeds the screen size */
 @media only screen and (min-width: 1024px) {
   .navbar-dropdown {
